--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,8 @@
 title: Pinapple Pizza
 email: pinapple@pizza.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Pineapple Pizza is a small familiy run pizza chian. 
+  Check out how we integrate pineaplles into our pizza
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: Pinapple Pizza
