--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -2,5 +2,8 @@
     "globalHeaders": {
       "Access-Control-Allow-Origin": "https://mango-ocean-0ce316603.1.azurestaticapps.net",
       "Access-Control-Allow-Methods": "POST, GET, OPTIONS"
-    }
+    },
+    "networking": {
+        "allowedIpRanges": ["AzureFrontDoor.Backend"]
+      }
   }
