--- a/ARM/stappparameters.json
+++ b/ARM/stappparameters.json
@@ -24,7 +24,7 @@
             "value": "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"
         },
         "appLocation": {
-            "value": "./"
+            "value": "./app"
         },
         "apiLocation": {
             "value": ""
